# cpu_extensions

./: .gitignore  CMakeLists.txt  README.md
include/: llm_emb_gpt.hpp  llm_fc.hpp  llm_mha_gpt.hpp  llm_mm.hpp  llm_plain_tensor.hpp  llm_tensor.hpp  llm_types.hpp
src/: CMakeLists.txt  emb_gpt_api.cpp  emb_gpt_avx512.cpp  emb_gpt_avx512.hpp  fc_amx.cpp  fc_amx.hpp  fc_api.cpp  fc_kernel_amx.cpp  fc_kernel_amx.hpp  fc_kernel_api.cpp  gelu_kernel_avx512.hpp  mha_gpt_amx.cpp  mha_gpt_amx.hpp  mha_gpt_api.cpp  mm_kernel_amx.cpp  mm_kernel_amx.hpp  mm_kernel_api.cpp  mm_kernel_common_amx.hpp  rotary_kernel_avx2.hpp  rotary_kernel_avx512.hpp  softmax_kernel_avx512.hpp  transpose_kernel_avx512.hpp  utility_kernel_amx.hpp  utility_kernel_avx2.hpp  utility_kernel_avx512.hpp
src/common/: compatible.hpp  llm_plain_tensor.cpp  log.hpp  memory_alloc.cpp  memory_alloc.hpp  simple_parallel.hpp  tensor.cpp  tensor2d.hpp  tensor2d_helper.hpp  utility.hpp
tests/: CMakeLists.txt
tests/script/: README.md  build.sh  requirements.txt  test_attn_chatglm.py  test_mha_bloom.py  test_mha_chatglm.py  test_mha_gpt.py  test_rotary_pastkv.py  test_rotary_pastkv_chatglm.py  test_rotary_pastkv_falcon.py
tests/script/ext/: CMakeLists.txt  attn_gpt.cpp  emb_gpt.cpp  mha_gpt.cpp  module.hpp  setup.py
tests/script/models/chatglm-6b/: modeling_chatglm.py
tests/src/: benchfc.cpp  test_common.cpp  test_common.hpp  test_fc_amx.cpp  test_fc_kernel_amx.cpp  test_gelu_kernel_avx512.cpp  test_mm_kernel_amx.cpp  test_rotary_kernel_avx2.cpp  test_rotary_kernel_avx512.cpp  test_softmax_kernel_avx512.cpp  test_transpose_kernel_avx512.cpp  test_utility_kernel_avx512.cpp  test_utility_kernel_repack1x2_avx512.cpp  timeit.hpp
